--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Clock In Clock Out System"
     />
-    <title>Clock In/Out System</title>
+    <title>🕐 Clock In/Out System</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
