--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/icon.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/icon.png" />
-    <link rel="apple-touch-icon" href="/icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/icon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/icon.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
